--- a/index.html
+++ b/index.html
@@ -165,6 +165,11 @@
                     <h3>Data Science Job Simulation</h3>
                     <p>British Arlines-Forage • Feb 2025</p>
                 </div>
+                <div class="certificate-card">
+                    <img src="Advanced Software Engineering.jpg" alt="Certificate 2" class="certificate-image">
+                    <h3>Walmart Advanced Software Engineering Job Simulation</h3>
+                    <p>Forage-Walmart • March 2025</p>
+                </div>
             </div>
         </div>
     </div>
