--- a/index.html
+++ b/index.html
@@ -166,9 +166,9 @@
                     <p>British Arlines-Forage • Feb 2025</p>
                 </div>
                 <div class="certificate-card">
-                    <img src="Advanced Software Engineering.jpg" alt="Certificate 2" class="certificate-image">
-                    <h3>Walmart Advanced Software Engineering Job Simulation</h3>
-                    <p>Forage-Walmart • March 2025</p>
+                    <img src="Advanced Software Engineering.jpg" alt="Certificate 4" class="certificate-image">
+                    <h3>Walmart -Advanced Software Engineering</h3>
+                    <p>EdX • Mar 2025</p>
                 </div>
             </div>
         </div>
