--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <div class="certifications-grid">
                 <div class="certificate-card">
                     <img src="GDA.jpg" alt="Certificate 1" class="certificate-image">
-                    <h3>Googgle Data Analytics</h3>
+                    <h3>Google Data Analytics</h3>
                     <p>GOOGLE-COURSERA • FEB 2025</p>
                 </div>
                 <div class="certificate-card">
